--- a/.github/workflows/build_luci-app-singbox-ui_from_pr.yml
+++ b/.github/workflows/build_luci-app-singbox-ui_from_pr.yml
@@ -1,5 +1,5 @@
 name: Build luci-app-singbox-ui from pr v1
-run-name: Build and push runner .ipk for PR ${{ github.event.pull_request.number }}
+run-name: Build runner-ipk PR ${{ github.event.pull_request.number }}
 
 on:
   pull_request:
