--- a/.github/workflows/build_luci-app-singbox-ui_from_tag.yml
+++ b/.github/workflows/build_luci-app-singbox-ui_from_tag.yml
@@ -1,5 +1,5 @@
 name: Build luci-app-singbox-ui from tag v2
-run-name: Build release ${{ github.ref_name }}
+run-name: Build release TAG ${{ github.ref_name }}
 
 on:
   push:
