--- a/.github/workflows/build_luci-app-singbox-ui_from_tag.yml
+++ b/.github/workflows/build_luci-app-singbox-ui_from_tag.yml
@@ -1,4 +1,4 @@
-name: Build luci-app-singbox-ui from tag v2
+name: Build luci-app-singbox-ui from TAG
 run-name: Build release TAG ${{ github.ref_name }}
 
 on:
