--- a/.github/workflows/build_luci-app-singbox-ui_from_pr.yml
+++ b/.github/workflows/build_luci-app-singbox-ui_from_pr.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build .ipk from PR
+    name: Build artifact PR ${{ github.event.pull_request.number }}
     runs-on: ubuntu-latest
 
     outputs:
