--- a/.github/workflows/build_luci-app-singbox-ui_from_tag.yml
+++ b/.github/workflows/build_luci-app-singbox-ui_from_tag.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build release TAG ${{ github.ref_name }}
+    name: Build release
     runs-on: ubuntu-latest
 
     steps:
