set name github-actions[bot]

--- a/.github/workflows/build_luci-app-singbox-ui_from_tag.yml
+++ b/.github/workflows/build_luci-app-singbox-ui_from_tag.yml
@@ -50,7 +50,7 @@ jobs:
           else
             echo "📤 Committing updated Makefile..."
             git add luci-app-singbox-ui/Makefile
-            git commit -m "chore: sync Makefile version with tag v${TAG_VERSION}"
+            git commit -m "github-actions[bot]: sync Makefile version with tag v${TAG_VERSION}"
             git push origin HEAD:main
           fi
         env:
