--- a/.github/workflows/build_luci-app-singbox-ui_from_pr.yml
+++ b/.github/workflows/build_luci-app-singbox-ui_from_pr.yml
@@ -93,7 +93,7 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          echo "📤 Committing updated .ipk to main"
+          echo "📤 Committing updated .ipk to main branch..."
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add artifacts/
