--- a/.github/workflows/build_luci-app-singbox-ui_from_pr.yml
+++ b/.github/workflows/build_luci-app-singbox-ui_from_pr.yml
@@ -77,7 +77,7 @@ jobs:
           mkdir -p artifacts
           cp ./new-ipk/*.ipk ./artifacts/
 
-      - name: Remove old .ipk files (> 7 days)
+      - name: Remove old .ipk files (> 7 days old)
         run: |
           echo "Current directory: $(pwd)"
           echo "Listing artifacts directory:"
@@ -89,10 +89,8 @@ jobs:
               echo "Processing file: $file"
               basename=$(basename "$file")
               echo "Basename: $basename"
-              date_part="${basename##*-}"
-              echo "Date part before .ipk remove: $date_part"
-              date_part="${date_part%.ipk}"
-              echo "Date part: $date_part"
+              date_part=$(echo "$basename" | sed -E 's/.*-([0-9]{8}-[0-9]{4})\.ipk$/\1/')
+              echo "Extracted date part: $date_part"
               if [[ $date_part =~ ^[0-9]{8}-[0-9]{4}$ ]]; then
                 echo "Matched regex"
                 ymd=${date_part:0:8}
