ACL: add /etc/nftables.d/* read+write for TPROXY rules; menu: restore uci singbox-ui dependency

--- a/luci-app-singbox-ui/root/usr/share/rpcd/acl.d/luci-app-singb.json
+++ b/luci-app-singbox-ui/root/usr/share/rpcd/acl.d/luci-app-singb.json
@@ -3,27 +3,65 @@
         "description": "Singbox-UI management access",
         "read": {
             "file": {
+                "/etc/nftables.d/*": [ "read" ],
+                "/etc/init.d/*": [ "exec" ],
                 "/etc/init.d/sing-box": [ "exec" ],
+                "/etc/init.d/firewall": [ "exec" ],
+                "/etc/init.d/network": [ "exec" ],
                 "/etc/init.d/singbox-ui-autoupdater-service": [ "exec" ],
                 "/etc/init.d/singbox-ui-memdoc-service": [ "exec" ],
                 "/etc/init.d/singbox-ui-health-autoupdater-service": [ "exec" ],
                 "/etc/sing-box/*": ["read"],
+                "/usr/sbin/nft": ["exec"],
+                "/sbin/ip": ["exec"],
+                "/sbin/logread": ["exec"],
                 "/usr/bin/singbox-ui/*": ["exec"],
                 "/tmp/*": ["read"],
                 "/usr/bin/sing-box check -c /tmp/singbox-config.json": ["exec"],
+                "/sbin/uci": ["exec"],
                 "/sbin/uci set singbox-ui.*": ["exec"],
                 "/sbin/uci commit singbox-ui": ["exec"],
-                "/sbin/uci get singbox-ui.*": ["exec"]
+                "/sbin/uci get singbox-ui.*": ["exec"],
+                "/sbin/uci get network.*": ["exec"],
+                "/sbin/uci get firewall.*": ["exec"],
+                "/sbin/uci show firewall": ["exec"],
+                "/sbin/uci show network": ["exec"]
             },
             "uci": ["singbox-ui"]
         },
         "write": {
             "file": {
+                "/etc/init.d/*": [ "exec" ],
+                "/etc/init.d/sing-box": [ "exec" ],
+                "/etc/init.d/firewall": [ "exec" ],
+                "/etc/init.d/network": [ "exec" ],
+                "/etc/init.d/singbox-ui-autoupdater-service": [ "exec" ],
+                "/etc/init.d/singbox-ui-memdoc-service": [ "exec" ],
+                "/etc/init.d/singbox-ui-health-autoupdater-service": [ "exec" ],
                 "/etc/sing-box/*": ["write"],
+                "/etc/nftables.d/*": ["read", "write"],
                 "/tmp/*": ["write"],
+                "/usr/sbin/nft": ["exec"],
+                "/sbin/ip": ["exec"],
+                "/sbin/logread": ["exec"],
+                "/sbin/uci": ["exec"],
                 "/sbin/uci set singbox-ui.*": ["exec"],
                 "/sbin/uci commit singbox-ui": ["exec"],
-                "/sbin/uci get singbox-ui.*": ["exec"]
+                "/sbin/uci get singbox-ui.*": ["exec"],
+                "/sbin/uci set network.*": ["exec"],
+                "/sbin/uci set firewall.*": ["exec"],
+                "/sbin/uci add firewall": ["exec"],
+                "/sbin/uci add firewall zone": ["exec"],
+                "/sbin/uci add firewall forwarding": ["exec"],
+                "/sbin/uci add_list firewall.*": ["exec"],
+                "/sbin/uci delete firewall.*": ["exec"],
+                "/sbin/uci delete network.*": ["exec"],
+                "/sbin/uci -q delete firewall.*": ["exec"],
+                "/sbin/uci -q delete network.*": ["exec"],
+                "/sbin/uci commit network": ["exec"],
+                "/sbin/uci commit firewall": ["exec"],
+                "/sbin/uci get network.*": ["exec"],
+                "/sbin/uci get firewall.*": ["exec"]
             },
             "uci": ["singbox-ui"]
         }
